syntax = "proto2";
option java_package = "com.aliyun.emr.rss.service.deploy.master.clustermeta";
option java_outer_classname = "ResourceProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package deploy.master.meta;

enum Type {
  UnRegisterShuffle = 12;
  RequestSlots = 13;
  ReleaseSlots = 14;
  AppHeartBeat = 15;
  AppLost = 16;
  WorkerLost = 17;
  WorkerHeartBeat = 18;
  RegisterWorker = 19;
  ReportWorkerFailure = 20 ;
  UpdatePartitionSize = 21;
}

message ResourceRequest {
  required Type cmdType = 1; // Type of the command

  optional string requestId = 2 [default=""];

  optional RequestSlotsRequest requestSlotsRequest = 10;
  optional ReleaseSlotsRequest releaseSlotsRequest = 11;
  optional UnregisterShuffleRequest unregisterShuffleRequest = 12;
  optional AppHeartbeatRequest appHeartbeatRequest = 13;
  optional AppLostRequest appLostRequest = 14;
  optional WorkerLostRequest workerLostRequest = 15;
  optional WorkerHeartBeatRequest workerHeartBeatRequest = 16;
  optional RegisterWorkerRequest registerWorkerRequest = 17;
  optional ReportWorkerFailureRequest reportWorkerFailureRequest = 18;
}

message DiskInfo {
  required string mountPoint = 1;
  required int64 usableSpace = 2;
  required double avgFlushTime = 3;
  required int64 usedSlots = 4;
}

message RequestSlotsRequest {
  required string shuffleKey = 1;
  required string hostName = 2;
  map<string, SlotInfo> workerAllocations = 3;
}

message SlotInfo{
  map<string, int32> slot = 1;
}

message ReleaseSlotsRequest {
  required string shuffleKey = 1;
  repeated string workerIds = 2;
  repeated SlotInfo slots = 3;
}

message UnregisterShuffleRequest {
  required string shuffleKey = 1;
}

message AppHeartbeatRequest {
  required string appId = 1;
  required int64 time = 2;
}

message AppLostRequest {
  required string appId = 1;
}

message WorkerLostRequest {
  required string host = 1;
  required int32 rpcPort = 2;
  required int32 pushPort = 3;
  required int32 fetchPort = 4 ;
  required int32 replicatePort = 5;
}

message WorkerHeartBeatRequest {
  required string host = 1;
  required int32 rpcPort = 2;
  required int32 pushPort = 3;
  required int32 fetchPort = 4;
  required int32 replicatePort = 5;
  map<string, DiskInfo> disks = 6;
  required int64 time = 7;
}

message RegisterWorkerRequest {
  required string host = 1;
  required int32 rpcPort = 2;
  required int32 pushPort = 3;
  required int32 fetchPort = 4;
  required int32 replicatePort = 5;
  map<string, DiskInfo> disks = 6;
}

message ReportWorkerFailureRequest {
  repeated WorkerAddress failedWorker = 1;
}

message WorkerAddress{
  required string host = 1;
  required int32 rpcPort = 2;
  required int32 pushPort = 3;
  required int32 fetchPort = 4;
  required int32 replicatePort = 5;
}

enum Status {
  OK = 1;
  INTERNAL_ERROR= 2;
}

message ResourceResponse {
  required Type cmdType = 1; // Type of the command

  optional bool success = 2 [default=true];

  optional string message = 3;

  required Status status = 4;
}
